[gd_scene load_steps=22 format=3 uid="uid://bh0vunoi43bgh"]

[ext_resource type="Script" path="res://menu.gd" id="1_6pvpn"]
[ext_resource type="Texture2D" uid="uid://wv8o1qwlhp6g" path="res://Assets/2D/UI/buttonPlay.png" id="2_3f1jx"]
[ext_resource type="Texture2D" uid="uid://btmu7x1ogq8jd" path="res://Assets/2D/Main Menu/UJamBG.png" id="2_wkvxx"]
[ext_resource type="Texture2D" uid="uid://b0fi2dlk0ifmp" path="res://Assets/2D/UI/buttonGuide.png" id="4_07mng"]
[ext_resource type="Texture2D" uid="uid://bede7kjb0wv1t" path="res://Assets/2D/UI/buttonCredits.png" id="5_ffgha"]
[ext_resource type="Texture2D" uid="uid://ctss2qrkuh4sq" path="res://Assets/2D/Main Menu/UjamGuide.png" id="7_n1cnw"]
[ext_resource type="PackedScene" uid="uid://c0sfoordwhi84" path="res://Objects/Back.tscn" id="8_2t2wj"]
[ext_resource type="Texture2D" uid="uid://ck575m8gmtwcp" path="res://Assets/2D/Main Menu/uJamCredits.png" id="11_0k2x3"]
[ext_resource type="PackedScene" uid="uid://bxy3qp2orvm5g" path="res://Objects/QuitButton.tscn" id="11_ddft2"]
[ext_resource type="AudioStream" uid="uid://df4jhfna2skex" path="res://Assets/Sound/click.wav" id="12_dymy8"]
[ext_resource type="AudioStream" uid="uid://cxdq7s0fgo1u5" path="res://Assets/Sound/Music/mainMenu.wav" id="13_dd755"]
[ext_resource type="Texture2D" uid="uid://cyj0ntdthw682" path="res://Assets/2D/Main Menu/ujamTitle.png" id="14_o5ot2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j3874"]
atlas = ExtResource("2_3f1jx")
region = Rect2(0, 0, 128.004, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3b7d"]
atlas = ExtResource("2_3f1jx")
region = Rect2(255.971, 0, 128.029, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjoai"]
atlas = ExtResource("2_3f1jx")
region = Rect2(127.969, 0, 128.029, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqhle"]
atlas = ExtResource("4_07mng")
region = Rect2(0, 0, 127.951, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8j7"]
atlas = ExtResource("4_07mng")
region = Rect2(256.095, -0.076704, 127.847, 32.0653)

[sub_resource type="AtlasTexture" id="AtlasTexture_abcj1"]
atlas = ExtResource("4_07mng")
region = Rect2(128.18, -0.076704, 127.824, 32.0653)

[sub_resource type="AtlasTexture" id="AtlasTexture_lobuq"]
atlas = ExtResource("5_ffgha")
region = Rect2(0, 0, 127.951, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrkng"]
atlas = ExtResource("5_ffgha")
region = Rect2(256.095, -0.076704, 127.847, 32.0653)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqkqg"]
atlas = ExtResource("5_ffgha")
region = Rect2(128.18, -0.076704, 127.824, 32.0653)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6pvpn")

[node name="UJamBg" type="Sprite2D" parent="."]
position = Vector2(320, 180)
texture = ExtResource("2_wkvxx")

[node name="UjamTitle" type="Sprite2D" parent="."]
position = Vector2(320, 84)
texture = ExtResource("14_o5ot2")

[node name="Start" type="TextureButton" parent="."]
layout_mode = 2
offset_top = 211.0
offset_right = 128.0
offset_bottom = 243.0
texture_normal = SubResource("AtlasTexture_j3874")
texture_pressed = SubResource("AtlasTexture_c3b7d")
texture_hover = SubResource("AtlasTexture_vjoai")

[node name="Guide" type="TextureButton" parent="."]
layout_mode = 2
offset_top = 249.675
offset_right = 128.0
offset_bottom = 361.35
texture_normal = SubResource("AtlasTexture_fqhle")
texture_pressed = SubResource("AtlasTexture_gl8j7")
texture_hover = SubResource("AtlasTexture_abcj1")

[node name="Credits" type="TextureButton" parent="."]
layout_mode = 2
offset_top = 288.675
offset_right = 128.0
offset_bottom = 400.35
texture_normal = SubResource("AtlasTexture_lobuq")
texture_pressed = SubResource("AtlasTexture_mrkng")
texture_hover = SubResource("AtlasTexture_tqkqg")

[node name="Quit" parent="." instance=ExtResource("11_ddft2")]
layout_mode = 0
offset_top = 327.0
offset_right = 64.0
offset_bottom = 359.0

[node name="UjamGuide" type="Sprite2D" parent="."]
visible = false
position = Vector2(319, 179)
texture = ExtResource("7_n1cnw")

[node name="UJamCredits" type="Sprite2D" parent="."]
visible = false
position = Vector2(320, 180)
texture = ExtResource("11_0k2x3")

[node name="PotionCancel" parent="." instance=ExtResource("8_2t2wj")]
visible = false
layout_mode = 0
offset_left = 256.0
offset_top = 326.0
offset_right = 384.0
offset_bottom = 366.0

[node name="UiClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_dymy8")

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_dd755")
volume_db = 4.0

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Guide" to="." method="_on_guide_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PotionCancel" to="." method="_on_potion_cancel_pressed"]
[connection signal="finished" from="MenuMusic" to="." method="_on_menu_music_finished"]
